--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,126 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.mainColor {
+  color: #5011cc;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.mainBGColor {
+  background-color: #5011cc;
+  color: white;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+.activeLink {
+  color: #5011cc !important;
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.nav-link {
+  font-size: 18px !important;
+  font-weight: 500 !important;
+  padding: 8px 0 !important;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+.nav-link:hover {
+  color: #5011cc !important;
+  border-bottom: 2px solid #5011cc !important;
+  padding-bottom: 1px !important;
+  transition: border-bottom 0.2s ease-in-out !important;
+}
+@media (max-width: 796px) {
+  .nav-link:hover {
+    border-bottom: none !important;
+    padding-bottom: 8px !important;
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.homeImgTop {
+  width: 600px;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media (max-width: 796px) {
+  .homeImgTop {
+    width: 100%;
   }
+}
+
+.homeImgDown {
+  width: 600px;
+}
+@media (max-width: 796px) {
+  .homeImgDown {
+    width: 100%;
+  }
+}
+
+.btn:hover {
+  background-color: #5011cc !important;
+  border-color: #5011cc !important;
+}
+
+.card:hover .card-title {
+  color: #5011cc;
+}
+
+.All-Blog .card-text-top::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50px;
+  height: 1px;
+  background-color: #5011cc;
+}
+
+.VirtualTours .mainImage {
+  height: 480px;
+  overflow: hidden;
+  vertical-align: middle;
+  object-fit: contain;
+}
+@media (max-width: 1024px) {
+  .VirtualTours .mainImage {
+    height: 24rem;
+  }
+}
+@media (max-width: 796px) {
+  .VirtualTours .mainImage {
+    height: 16rem;
+  }
+}
+
+.VirtualTours .mainContent .container,
+.BlogDetails .mainContent .container,
+.About {
+  width: 45% !important;
+}
+@media (max-width: 1200px) {
+  .VirtualTours .mainContent .container,
+  .BlogDetails .mainContent .container,
+  .About {
+    width: 60% !important;
+  }
+}
+@media (max-width: 1024px) {
+  .VirtualTours .mainContent .container,
+  .BlogDetails .mainContent .container,
+  .About {
+    width: 75% !important;
+  }
+}
+@media (max-width: 796px) {
+  .VirtualTours .mainContent .container,
+  .BlogDetails .mainContent .container,
+  .About {
+    width: 100% !important;
+  }
+}
+
+footer .social a {
+  width: 50%;
+  display: block;
+}
+
+.footerImg {
+  width: 100%;
+  height: auto;
+}
+
+footer ul li {
+  list-style: none;
 }
